deploy/k8s/kafka.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kafka
  labels:
    istio-injection: enabled
---
# Source: kafka/templates/controller-eligible/svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-hl
  namespace: kafka
  labels:
    app: kafka
spec:
  type: ClusterIP
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
    - name: tcp-interbroker
      port: 9094
      protocol: TCP
      targetPort: interbroker
    - name: tcp-client
      port: 9092
      protocol: TCP
      targetPort: client
    - name: tcp-controller
      protocol: TCP
      port: 9093
      targetPort: controller
  selector:
    app: kafka
---
# Source: kafka/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-0
  namespace: kafka
  labels:
    app: kafka
spec:
  type: NodePort
  sessionAffinity: None
  ports:
    - name: tcp-client
      port: 9092
      protocol: TCP
      nodePort: 9092
    - name: tcp-interbroker
      port: 9093
      protocol: TCP
      nodePort: 9093
    - name: tcp-controller
      port: 9094
      protocol: TCP
      nodePort: 9094
  selector:
    app: kafka
    apps.kubernetes.io/pod-index: "0"
---
# Source: kafka/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-1
  namespace: kafka
  labels:
    app: kafka
spec:
  type: NodePort
  sessionAffinity: None
  ports:
    - name: tcp-client
      port: 9092
      protocol: TCP
      nodePort: 19092
  selector:
    app: kafka
    apps.kubernetes.io/pod-index: "1"
---
# Source: kafka/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-2
  namespace: kafka
  labels:
    app: kafka
spec:
  type: NodePort
  sessionAffinity: None
  ports:
    - name: tcp-client
      port: 9092
      protocol: TCP
      nodePort: 29092
  selector:
    app: kafka
    apps.kubernetes.io/pod-index: "2"
---
# Source: kafka/templates/controller-eligible/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: kafka
  labels:
    app: kafka
spec:
  podManagementPolicy: Parallel
  replicas: 3
  selector:
    matchLabels:
      app: kafka
  serviceName: kafka-hl
  updateStrategy:
    type: RollingUpdate
  minReadySeconds: 0
  template:
    metadata:
      labels:
        app: kafka
    spec:
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        seccompProfile:
          type: RuntimeDefault
        supplementalGroups: []
        sysctls: []
      enableServiceLinks: true
      containers:
        - name: kafka
          image: bitnami/kafka:3.9.0
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: true
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            privileged: true
          ports:
            - name: controller
              containerPort: 9093
            - name: client
              containerPort: 9092
            - name: interbroker
              containerPort: 9094
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 20
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            tcpSocket:
              port: 9092
          readinessProbe:
            failureThreshold: 6
            initialDelaySeconds: 15
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            tcpSocket:
              port: "controller"
          volumeMounts:
            - name: data
              mountPath: /bitnami/kafka
            - name: logs
              mountPath: /opt/bitnami/kafka/logs
            - name: kafka-config
              mountPath: /opt/bitnami/kafka/config/server.properties
              subPath: server.properties
            - name: tmp
              mountPath: /tmp
            - name: init-shared
              mountPath: /shared
            - name: kafka-sasl
              mountPath: /opt/bitnami/kafka/config/secrets
              readOnly: true
            - name: time
              mountPath: /etc/localtime
      volumes:
        - name: kafka-configmaps
          configMap:
            name: kafka-controller-configuration
        - name: kafka-secret-config
          emptyDir: {}
        - name: kafka-config
          emptyDir: {}
        - name: tmp
          emptyDir: {}
        - name: data
          hostPath:
            path: /data/kafka/data
            type: DirectoryOrCreate
        - name: init-shared
          emptyDir: {}
        - name: time
          hostPath:
            path: /etc/localtime
        - name: kafka-sasl
          projected:
            sources:
              - secret:
                  name:  kafka-user-passwords
        - name: logs
          hostPath:
            path: /data/kafka/logs
            type: DirectoryOrCreate
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: kafka
                topologyKey: kubernetes.io/hostname
              weight: 1
