deploy/k8s/mysql.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mysql
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-master-hl
  namespace: mysql
spec:
  ports:
    - port: 3306
      targetPort: 3306
  clusterIP: None
  selector:
    app: mysql-master
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-slave-hl
  namespace: mysql
spec:
  ports:
    - port: 3306
      targetPort: 3306
  clusterIP: None
  selector:
    app: mysql-slave
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-master
  namespace: mysql
spec:
  ports:
    - port: 3306
      targetPort: 3306
      nodePort: 3306
  type: NodePort
  selector:
    app: mysql-master
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-slave
  namespace: mysql
spec:
  ports:
    - port: 3306
      targetPort: 3306
      nodePort: 3307
  type: NodePort
  selector:
    app: mysql-slave
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-master
  namespace: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-master
  serviceName: mysql-master-hl
  template:
    metadata:
      labels:
        app: mysql-master
    spec:
      containers:
        - name: mysql-master
          image: mysql:8.4.6
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: data
            - mountPath: /docker-entrypoint-initdb.d/master_init.sh
              name: init
              subPath: master_init.sh
            - mountPath: /etc/mysql/my.cnf
              name: init
              subPath: my.cnf
      volumes:
        - name: data
          hostPath:
            path: /data/mysql/data
            type: DirectoryOrCreate
        - name: init
          configMap:
            name: mysql-cm
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: role
                    operator: In
                    values:
                      - master
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-slave
  namespace: mysql
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mysql-slave
  serviceName: mysql-slave-hl
  template:
    metadata:
      labels:
        app: mysql-slave
    spec:
      containers:
        - name: mysql-slave
          image: mysql:8.4.6
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: data
            - mountPath: /docker-entrypoint-initdb.d/slave_init.sh
              name: init
              subPath: slave_init.sh
            - mountPath: /etc/mysql/my.cnf
              name: init
              subPath: slave.cnf
      volumes:
        - name: data
          hostPath:
            path: /data/mysql/data
            type: DirectoryOrCreate
        - name: init
          configMap:
            name: mysql-cm
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: role
                    operator: In
                    values:
                      - slave
