deploy/k8s/redis-cluster.yaml
apiVersion: v1
kind: Namespace
metadata:
  namespace: redis
  labels:
    istio-injection:  enabled
---
apiVersion: v1
kind: Service
metadata:
  name: redis-hl
  namespace: redis
  labels:
    app: redis
spec:
  clusterIP: None
  ports:
    - name: tcp-redis
      port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    app: redis
---
apiVersion: v1
kind: Service
metadata:
  name: redis-hl
  namespace: redis
  labels:
    app: redis
spec:
  type: NodePort
  ports:
    - name: tcp-redis
      port: 6379
      protocol: TCP
      targetPort: 6379
      nodePort: 6379
  selector:
    app: redis
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: redis
  labels:
    app: redis
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7.4.2
          ports:
            - containerPort: 6379
              name: tcp-redis
          command:
            - redis-server
            - /etc/redis/redis.conf
          volumeMounts:
            - mountPath: /etc/redis/redis.conf
              name: redis-cm
              subPath: redis.conf
            - mountPath: /data
              name: redis-data
      volumes:
        - name: redis-cm
          configMap:
            name: redis-cm
        - name: redis-data
          hostPath:
            path: /data/redis
            type: DirectoryOrCreate
