deploy/k8s/redis.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: redis
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Service
metadata:
  name: redis-hl
  namespace: redis
spec:
  clusterIP: None
  ports:
    - name: tcp-redis
      protocol: TCP
      port: 6379
  sessionAffinity: None
  selector:
    app: redis
---
apiVersion: v1
kind: Service
metadata:
  name: redis-sentinel-hl
  namespace: redis
spec:
  clusterIP: None
  ports:
    - name: tcp-sentinel
      protocol: TCP
      port: 16379
  sessionAffinity: None
  selector:
    app: redis-sentinel
---
apiVersion: v1
kind: Service
metadata:
  name: redis-0
  namespace: redis
spec:
  type: NodePort
  selector:
    app: redis
    apps.kubernetes.io/pod-index: '0'
  ports:
    - port: 6379
      protocol: TCP
      nodePort: 30040
      name: tcp-redis
---
apiVersion: v1
kind: Service
metadata:
  name: redis-1
  namespace: redis
spec:
  type: NodePort
  selector:
    app: redis
    apps.kubernetes.io/pod-index: '1'
  ports:
    - port: 6379
      protocol: TCP
      nodePort: 30041
      name: tcp-redis
---
apiVersion: v1
kind: Service
metadata:
  name: redis-2
  namespace: redis
spec:
  type: NodePort
  selector:
    app: redis
    apps.kubernetes.io/pod-index: '2'
  ports:
    - port: 6379
      protocol: TCP
      nodePort: 30042
      name: tcp-redis
---
apiVersion: v1
kind: Service
metadata:
  name: redis-sentinel
  namespace: redis
spec:
  ports:
    - nodePort: 16379
      protocol: TCP
      port: 16379
      name: tcp-sentinel
  selector:
    app: redis-sentinel
  type: NodePort
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: redis
spec:
  podManagementPolicy: Parallel
  replicas: 3
  selector:
    matchLabels:
      app: redis
  serviceName: redis-hl
  template:
    metadata:
      labels:
        app: redis
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: redis
              topologyKey: kubernetes.io/hostname
      containers:
        - args:
            - -c
            - redis-server /conf/redis.conf
          command:
            - sh
          image: redis:7.4.2
          livenessProbe:
            tcpSocket:
              port: 6379
          name: redis
          ports:
            - containerPort: 6379
              name: export
          startupProbe:
            failureThreshold: 30
            periodSeconds: 10
            tcpSocket:
              port: 6379
          volumeMounts:
            - name: config-volume
              mountPath: /conf
            - mountPath: /etc/localtime
              name: time
              readOnly: true
            - mountPath: /data
              name: data
            - mountPath: /var
              name: var
      volumes:
        - configMap:
            name: redis-config
          name: config
        - name: scripts
          configMap:
            name: redis-scripts
        - name: time
          hostPath:
            path: /etc/localtime
            type: File
        - hostPath:
            path: /data/redis/data
            type: DirectoryOrCreate
          name: data
        - hostPath:
            path: /data/redis/var
            type: DirectoryOrCreate
          name: var
        - name: config-volume
          emptyDir: { }
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-sentinel
  namespace: redis
spec:
  podManagementPolicy: Parallel
  replicas: 3
  selector:
    matchLabels:
      app: redis-sentinel
  serviceName: redis-sentinel-hl
  template:
    metadata:
      labels:
        app: redis-sentinel
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: redis-sentinel
              topologyKey: kubernetes.io/hostname
      containers:
        - command:
            - sh
            - -c
            - |
              redis-sentinel /conf/sentinel.conf
          image: redis:7.4.2
          livenessProbe:
            tcpSocket:
              port: 16379
          name: redis-sentinel
          ports:
            - containerPort: 16379
              name: export
          startupProbe:
            failureThreshold: 30
            periodSeconds: 10
            tcpSocket:
              port: 16379
          volumeMounts:
            - mountPath: /etc/localtime
              name: time
              readOnly: true
            - mountPath: /data
              name: data
            - mountPath: /var
              name: var
            - name: config-volume
              mountPath: /conf
      volumes:
        - name: scripts
          configMap:
            name: redis-scripts
        - hostPath:
            path: /etc/localtime
            type: File
          name: time
        - hostPath:
            path: /data/redis/data
            type: DirectoryOrCreate
          name: data
        - hostPath:
            path: /data/redis/var
            type: DirectoryOrCreate
          name: var
        - name: config-volume
          emptyDir: { }
