deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: istio-system
spec:
  type: NodePort
  selector:
    app.kubernetes.io/instance: grafana
    app.kubernetes.io/name: grafana
  ports:
    - port: 3000
      targetPort: 3000
      name: http
      protocol: TCP
      nodePort: 3000
      appProtocol: http
---
apiVersion: v1
kind: Service
metadata:
  name: kiali
  namespace: istio-system
spec:
  type: NodePort
  selector:
    app.kubernetes.io/instance: kiali
    app.kubernetes.io/name: kiali
  ports:
    - port: 20001
      targetPort: 20001
      name: http
      protocol: TCP
      nodePort: 20001
      appProtocol: http
    - port: 9090
      targetPort: 9090
      name: http-metrics
      protocol: TCP
      nodePort: 19090
      appProtocol: http
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: istio-system
spec:
  type: NodePort
  selector:
    app.kubernetes.io/instance: prometheus
    app.kubernetes.io/name: prometheus
  ports:
    - port: 9090
      targetPort: 9090
      name: http
      protocol: TCP
      nodePort: 9090
      appProtocol: http
---
